--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
                                           <div class="jons">
                                              <h4>Dr. Zachary Russell</h4>
                                           </div>
-                                          <p>FILL THIS OUT</p>
+                                          <p>Hometown: Apex, North Carolina <br> Major: Applied Physics <br> Role: Club Advisor <br></p>
                                        </div>
                                     </div>
                                  </div>
@@ -204,7 +204,7 @@
                                           <div class="jons">
                                              <h4>Daniel Payeras</h4>
                                           </div>
-                                          <p>FILL THIS OUT</p>
+                                          <p>Hometown: Miami, Florida <br> Major: Industrial Design <br> Role: President <br></p>
                                        </div>
                                     </div>
                                  </div>
@@ -227,7 +227,7 @@
                                           <div class="jons">
                                              <h4>Ethan Rosenbaum</h4>
                                           </div>
-                                          <p>FILL THIS OUT</p>
+                                          <p>Hometown: Charlotte, North Carolina <br> Major: Applied Physics <br> Role: Vice President <br>  "I joined the robotics club back in 2019 because I wanted to take what I learned in my electronics classes and apply it to robotics. I’m really interested in learning about the different types of hardware that relates to robots, and how they can be controlled with software." </p>
                                        </div>
                                     </div>
                                  </div>
@@ -250,7 +250,7 @@
                                           <div class="jons">
                                              <h4>Zach Shaffer</h4>
                                           </div>
-                                          <p> Hometown: Raleigh, North Carolina <br> Year: Senior <br> Major: Computer Science <br> Role: Electronics Team Lead </p>
+                                          <p> Hometown: Raleigh, North Carolina <br> Major: Computer Science <br> Role: Electronics Team Lead <br> "I joined the club in 2020 after dealing with some life issues, Robotics Club was a great hobby and learning experience that helped me get away from it. My favorite topics in robotics have been artificial intelligence, machine learning, aerospace and electric vehicles." </p>
                                        </div>
                                     </div>
                                  </div>
@@ -273,7 +273,7 @@
                                           <div class="jons">
                                              <h4>Alexia Chapman</h4>
                                           </div>
-                                          <p>FILL THIS OUT</p>
+                                          <p>Hometown: Denver, North Carolina <br> Major: Computer Information Systems <br> Role: Electronics Team Member <br> "I joined the club after seeing the booth at Club Expo. I was interested in joining because I was on a robotics team previously and was excited to see that I could continue this interest in college. In the club, I’m most excited to work on the rover and learn more about 3D modeling and coding."</p>
                                        </div>
                                     </div>
                                  </div>
@@ -296,7 +296,7 @@
                                           <div class="jons">
                                              <h4>Keith Rubin</h4>
                                           </div>
-                                          <p>FILL THIS OUT</p>
+                                          <p> Hometown: Cary, North Carolina <br> Major: Computer Science <br> Role: Electronics Team Member <br> "Interested in applying software skills and learning about hardware, I joined the club after discovering it at Club Expo. Among other things, I am interested in working with face and body tracking." </p>
                                        </div>
                                     </div>
                                  </div>
